# framed

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  TEMPLATES.md  framed.yaml  pyproject.toml
.github/workflows/: publish.yml
docs/: PACKAGING.md
src/framed/: __init__.py  api.py  cli.py  config.py  extractor.py  processor.py  runner.py  simctl.py
src/framed/templates/: standard.py
src/framed/templates/cascade/: __init__.py  template.yaml
src/framed/templates/cascade/samples/: framed.yaml
src/framed/templates/panoramic/: __init__.py  template.yaml
src/framed/templates/panoramic/samples/: framed.yaml
src/framed/templates/perspective/: __init__.py  template.yaml
src/framed/templates/perspective/samples/: framed.yaml
src/framed/templates/standard/: __init__.py  template.yaml
src/framed/templates/standard/samples/: framed.yaml
