[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "framed-cli"
version = "0.1.0"
description = "Automated App Store screenshot generator for iOS"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "yamshta", email = "shymst125@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
]
dependencies = [
    "click>=8.0",
    "Pillow>=9.0",
    "PyYAML>=6.0",
    "numpy>=1.20",
]

[project.scripts]
framed = "framed.cli:main"

[project.urls]
Homepage = "https://github.com/yamshta/framed"

[tool.setuptools.packages.find]
where = ["src"]
include = ["framed*"]

[tool.setuptools.package-data]
framed = ["templates/**/*.yaml", "templates/**/*.png", "resources/*.png"]
